--- a/about.html
+++ b/about.html
@@ -149,8 +149,8 @@
             business make us different. <br />
             We work tirelessly to ensure your website drives results and helps
             your business grow. <br />Apart from that we offer
-            <a href="pricing.html">100% money back guarantee!</a> If you’re not
-            satisfied, you don’t pay a single rupee.
+            <a href="pricing.html">100% money back guarantee! 🤝</a> If you’re
+            not satisfied, you don’t pay a single rupee.
             <br />
             Join us and see the difference we can make.
           </h4>
