--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
       <div id="home">
         <div id="home-part--1">
           <h1>
-            UNLEASH YOUR SALES POTENTIAL WITH A HIGH CONVERTING BRAND WEBSITE!
+            Web Development Company In Pakistan That Guarantees More Sales 💸.
           </h1>
           <h3>
             Are you tired of seeing your business struggle while the big players
             dominate the market? We're here to change that! At RumiDevelops, we
             specialize in creating stunning brand websites and supercharging
-            your marketing materials. Our unique solutions will transform your
-            business into a well-recognized brand and
+            your marketing materials 🎯. Our unique solutions will transform
+            your business into a well-recognized brand and
             <span class="internal-problem"
-              >skyrocket your sales by up to 200%!</span
+              >skyrocket your sales by up to 200%! 🚀</span
             >
             <br /><br />
             And here's the best part: we offer a
@@ -141,7 +141,7 @@
       <div id="problems" class="container">
         <h1>
           TIRED OF BEING AN AVERAGE BUSINESS IN PAKISTAN? DISCOVER "HOW TO BOOST
-          YOUR SALES DIGITALLY!"
+          YOUR SALES DIGITALLY!" 🐱‍💻
         </h1>
         <div id="problems-div">
           <div id="problems-part--1">
@@ -200,12 +200,12 @@
             <br />
             <p>
               Picture this: Your Brand Website, working day and night, turning
-              visitors into paying customers <span>while you sleep.</span>
+              visitors into paying customers <span>while you sleep😴.</span>
             </p>
             <br />
             <p>
               The best part? You only pay for this superstar once! Then, it
-              keeps bringing in sales day and night, without any extra cost!
+              keeps bringing in sales day and night📈, without any extra cost!
             </p>
             <br /><br />
             <p>
@@ -246,7 +246,7 @@
               get sales. <br />
               <br />
               <span class="danger">Hurry up!</span> as we already have so many
-              customers and only two sessions per day.
+              customers and only two sessions per day ⏳.
             </p>
           </div>
           <div id="problems-part--2">
@@ -274,45 +274,42 @@
         </div>
         <div id="sales-growth--2" class="container">
           <h2 class="sales-growth--heading">
-            If you want to sky-rocket your sales with a clear brand website that
-            converts visitors into buyers, then
+            Ever dreamed of boosting your sales🚀 to new heights? With a clear,
+            compelling brand website that turns visitors into loyal buyers,
             <span>You are in the right place!</span>
           </h2>
           <div id="sales-growth--div" class="grid grid-three--cols">
             <div class="sales-growth--item">
-              <h3>Words First Approach!</h3>
+              <h3>Words First Approach!🔑</h3>
               <p>
-                Most web agencies ask their clients to provide content for the
-                website, which can be the <span>hardest part</span> of creating
-                a website.
+                Unlike most web agencies that dump the hard work of content
+                creation on you,
               </p>
               <br />
               <p>
-                We do things <span>differently</span>. We first deep dive into
-                understanding your business and then craft the best content for
-                your website. This ensures your site not only looks great but
-                also
-                <span> converts visitors into customers.</span>
+                we do things differently! We dive deep into understanding your
+                business, crafting content that not only looks amazing but also
+                converts like <span>crazy</span> . Your website will become a
+                powerful sales machine, turning casual visitors into loyal
+                customers.
               </p>
             </div>
             <div class="sales-growth--item">
-              <h3>First Impressions Matter</h3>
+              <h3>First Impressions Matter✨</h3>
               <p>
-                Your website is often the first contact between your business
+                Your website is often the first handshake between your business
                 and potential customers. A professional, user-friendly site
-                creates a good first impression, building trust and credibility.
+                creates an unforgettable first impression, building trust and
+                credibility from the get-go.
               </p>
               <br />
               <p>
-                We ensure this for you! A strong first impression leads to more
-                <span
-                  >customer inquiries, higher conversions, and increased
-                  sales.</span
-                >
+                We ensure your site captures hearts and wallets, leading to more
+                inquiries, higher conversions, and soaring sales.
               </p>
             </div>
             <div class="sales-growth--item">
-              <h3>Outstand everyone!</h3>
+              <h3>Outstand everyone! 🌟</h3>
               <p>
                 If you're in Pakistan, you know many small businesses don’t have
                 websites.
@@ -445,9 +442,9 @@
           </h3>
 
           <h3>
-            So, after reading tens of books on marketing and sales, I created
-            the <span>brand website script</span> which now helps me get more
-            sales than i could possibly handle!
+            So, after reading tens of books📚 on marketing and sales, I created
+            the <span>brand website script 📄</span> which now helps me get more
+            sales than i could possibly handle! 📈
           </h3>
           <h3>
             I feel that growing a business online should not be difficult and
@@ -455,11 +452,11 @@
             why at rumidevelops, we help you market your products/services in a
             clear message and build your brand website. So that you don't feel
             frustrated about getting sales anymore and focus on building your
-            product/service.
+            product/service and spend more time with your family🏖️.
           </h3>
           <h2>
             Join us in our mission to help small Pakistani businesses like
-            yours, sell more!
+            yours, sell more!🤝
           </h2>
           <div id="call-to--actions">
             <div id="contactBtn">
