--- a/pricing.html
+++ b/pricing.html
@@ -391,7 +391,7 @@
           </h3>
           <br />
           <h3>
-            2. A brain, just kidding. You just wanna have visitors and we'll
+            2. A brain, just kidding😁. You just wanna have visitors and we'll
             handle the rest (converting them into buyers)! using sales
             techniques and story branding.
           </h3>
@@ -428,7 +428,7 @@
           <br />
           <h4>
             Your business analysis and then creating customized roadmap for you
-            getting more clients online and beat your competition.
+            getting more clients online and beat your competition💪.
           </h4>
           <br />
           <h4>Creating your brand offer that no one can refuse!</h4>
@@ -449,7 +449,7 @@
           <h2>
             "Exposed! The 4 steps to destroy your competition in Pakistan
             without spending an extra rupee on sales and marketing within 3
-            months."
+            months🚀."
           </h2>
           <br />
           <h4>
