--- a/pricing.html
+++ b/pricing.html
@@ -447,9 +447,9 @@
           </h3>
           <br />
           <h2>
-            "Exposed! The 4 steps to destroy your competition in Pakistan
-            without spending an extra rupee on sales and marketing within 3
-            months🚀."
+            "Exposed! The 4 Secret Steps to Crush Your Competition in Pakistan
+            Without Spending a Single Rupee on Sales and Marketing—All in Just 3
+            Months! 🚀"
           </h2>
           <br />
           <h4>
