aow project added

--- a/works.html
+++ b/works.html
@@ -94,6 +94,30 @@
       <div class="projects">
         <div class="project-item">
           <div class="project-item--1">
+            <h2>Art of War: Legions</h2>
+            <p>
+              A funny game with huge amount of spectacular battles. You will be
+              the commander who leads legions of tiny armies. Accept the
+              challenges of various levels and don’t forget to get extra rewards
+              from bounty tasks! It’s your army, you‘re in charge.
+            </p>
+            <div id="pricingBtn">
+              <a href="https://gitwithrumi.github.io/artofwar/">
+                <button>Visit site</button>
+              </a>
+            </div>
+          </div>
+          <div class="project-item--2">
+            <img
+              src="images/AOW-LOGO.webp"
+              width="300px"
+              height="300px"
+              alt="AOW-LOGO"
+            />
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-item--1">
             <h2>RumiTravels</h2>
             <p>
               This website is a travel agency website a project of mine
