aow project added

--- a/works.html
+++ b/works.html
@@ -96,13 +96,16 @@
           <div class="project-item--1">
             <h2>Art of War: Legions</h2>
             <p>
-              A funny game with huge amount of spectacular battles. You will be
-              the commander who leads legions of tiny armies. Accept the
-              challenges of various levels and don’t forget to get extra rewards
-              from bounty tasks! It’s your army, you‘re in charge.
+              A funny game with huge amount of spectacular battles. I've put my
+              heart into this website. I first designed the entire wireframe
+              then, after my client liked the design, I developed it using
+              modern animations and transitions. Ensuring responsive design that
+              looks good on all screen sizes. And, UI/UX responsibly done. And,
+              I also did their on-page SEO as a complimentary service (free of
+              cost!).
             </p>
             <div id="pricingBtn">
-              <a href="https://gitwithrumi.github.io/artofwar/">
+              <a target="_blank" href="https://gitwithrumi.github.io/artofwar/">
                 <button>Visit site</button>
               </a>
             </div>
@@ -124,7 +127,10 @@
               showcasing my skills and experience in the field.
             </p>
             <div id="pricingBtn">
-              <a href="https://gitwithrumi.github.io/rumitravels/">
+              <a
+                target="_blank"
+                href="https://gitwithrumi.github.io/rumitravels/"
+              >
                 <button>Visit site</button>
               </a>
             </div>
@@ -148,7 +154,10 @@
               using realtime api to send messages to my email.
             </p>
             <div id="pricingBtn">
-              <a href="https://gitwithrumi.github.io/HR-CODERS/">
+              <a
+                target="_blank"
+                href="https://gitwithrumi.github.io/HR-CODERS/"
+              >
                 <button>Visit site</button>
               </a>
             </div>
@@ -170,7 +179,10 @@
               display it.
             </p>
             <div id="pricingBtn">
-              <a href="https://github.com/gitwithrumi/newsMonkey">
+              <a
+                target="_blank"
+                href="https://github.com/gitwithrumi/newsMonkey"
+              >
                 <button>Visit site</button>
               </a>
             </div>
