css best practices

--- a/index.html
+++ b/index.html
@@ -108,20 +108,18 @@
             Web Development Company In Pakistan That Guarantees More Sales 💸.
           </h1>
           <h3>
-            Are you tired of seeing your business struggle while the big players
-            dominate the market? We're here to change that! At RumiDevelops, we
-            specialize in creating stunning brand websites and supercharging
-            your marketing materials 🎯. Our unique solutions will transform
-            your business into a well-recognized brand and
+            Tired of watching your business struggle while the big players
+            dominate? Transform your business with a stunning brand website and
+            supercharged marketing materials 🎯 from RumiDevelops. And, Watch
+            your
             <span class="internal-problem"
-              >skyrocket your sales by up to 200%! 🚀</span
+              >sales skyrocket by up to 200%! 🚀</span
             >
             <br /><br />
-            And here's the best part: we offer a
+            And the best part? Our
             <a href="pricing.html">100% money-back guarantee</a>. If you don't
-            see the results you want, we'll refund every rupee. Take the leap
-            with us, invest in your success, and watch your business thrive like
-            never before!
+            see the results you want, we'll refund every rupee. Invest in your
+            success and watch your business thrive!
           </h3>
           <div id="contactBtn">
             <a href="strategy-session.html"
