css best practices

--- a/index.html
+++ b/index.html
@@ -341,25 +341,30 @@
         </div>
       </div>
       <div id="plan-container" class="container">
-        <h2>The Plan to Success!</h2>
+        <h2>Our Plan to Boost Your Sales and Help You Dominate the Market</h2>
         <div id="plan-div" class="grid grid-three--cols">
           <div class="plan-item">
             <h1>1.</h1>
             <h2>We help you plan your website</h2>
             <p>
-              Hop on a call with us, and we’ll dive deep into understanding your
-              business. We’ll ask all the right questions to tailor a plan just
-              for you.
+              Ready to transform your business? Start with a call where we dive
+              deep into understanding your needs. We’ll ask the right questions
+              to tailor a plan that fits you perfectly.
             </p>
             <br />
             <p>
-              We provide a customized website plan and quote that fits your
-              needs perfectly. No guesswork, just clear and precise solutions.
+              <strong>Tailored Strategy:</strong> Get a customized website plan
+              and quote, no guesswork involved.
             </p>
             <br />
             <p>
-              We don’t just build websites; we also guide you on how to market
-              your business efficiently. Let’s make your brand shine!
+              <strong>Expert Guidance:</strong> We don’t just build websites; we
+              guide you on how to market your business efficiently.
+            </p>
+            <br />
+            <p>
+              <strong>Shine Bright:</strong> Let’s make your brand shine and
+              stand out in the crowded market!
             </p>
             <i class="fa-solid fa-phone"></i>
           </div>
@@ -367,18 +372,24 @@
             <h1>2.</h1>
             <h2>We write words that sell</h2>
             <p>
-              We gather all the crucial details about your business and craft
-              words that resonate with your ideal customers.
+              Words matter. We gather all the crucial details about your
+              business and craft messages that resonate with your ideal
+              customers.
             </p>
             <br />
             <p>
-              Our approach utilizes the powerful StoryBrand framework,
-              transforming your small business into a well-recognized brand.
+              <strong>StoryBrand Framework:</strong> Transform your small
+              business into a well-recognized brand.
             </p>
             <br />
             <p>
-              The right words can make all the difference. We ensure your
-              message converts visitors into loyal customers!
+              <strong>Resonating Messages:</strong> Our approach ensures your
+              message converts visitors into loyal customers.
+            </p>
+            <br />
+            <p>
+              <strong>Impactful Communication:</strong> The right words can make
+              all the difference, driving sales and building trust.
             </p>
             <i class="fa-solid fa-bullseye"></i>
           </div>
@@ -386,18 +397,23 @@
             <h1>3.</h1>
             <h2>We design & develop it beautifully</h2>
             <p>
-              After crafting the perfect words, we design your brand website. If
-              you love the design, we move to the next step.
+              <strong>Design You’ll Love:</strong> We create a beautiful design
+              that captures your brand’s essence.
             </p>
             <br />
             <p>
-              We develop your site, rigorously test everything to ensure it
-              works perfectly, and optimize it with top-notch SEO.
+              <strong>Flawless Development:</strong> We rigorously test
+              everything to ensure your site works perfectly.
             </p>
             <br />
             <p>
-              Finally, we host your website, making sure it’s live and ready to
-              impress your customers.
+              <strong>SEO Optimization:</strong> Your site is optimized with
+              top-notch SEO to attract and retain customers.
+            </p>
+            <br />
+            <p>
+              <strong>Hosting Done Right:</strong> We host your website,
+              ensuring it’s live, fast, and ready to impress your audience.
             </p>
             <i class="fa-solid fa-code"></i>
           </div>
