css best practices

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     </script>
   </head>
   <body>
+    <div id="loader">
+      <h1>0%</h1>
+    </div>
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
@@ -115,7 +118,8 @@
             <span class="internal-problem"
               >sales skyrocket by up to 200%! 🚀</span
             >
-            <br /><br />
+          </h3>
+          <h3>
             And the best part? Our
             <a href="pricing.html">100% money-back guarantee</a>. If you don't
             see the results you want, we'll refund every rupee. Invest in your
@@ -456,7 +460,7 @@
           </h3>
 
           <h3>
-            So, after reading tens of books📚 on marketing and sales, I created
+            So, after reading numerous books📚 on marketing and sales, I created
             the <span>brand website script 📄</span> which now helps me get more
             sales than i could possibly handle! 📈
           </h3>
