--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,9 @@
     </script>
   </head>
   <body>
+    <div id="loader">
+      <h1>0%</h1>
+    </div>
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
