css best practices

--- a/about.html
+++ b/about.html
@@ -126,13 +126,17 @@
           </div>
         </div>
         <div id="about-mission">
-          <h1>Our Mission</h1>
+          <h1>Discover Your Path to Online Success</h1>
           <h4>
-            At Rumidevelops, we believe growing a business online should be
-            simple. Every small business should have the opportunity to thrive.
+            Ever felt like your business deserves more attention? <br />
+            At Rumidevelops, we simplify growing your business online so you can
+            focus on what you do best. <br /><br />
             Our mission is to help small Pakistani businesses market their
-            products and services with a clear message and build effective brand
-            websites.
+            products and services with clear, compelling messages and effective
+            brand websites. <br /><br />
+            We start by understanding your business in detail and then create
+            content that ensures your site not only looks great but converts
+            visitors into customers.
           </h4>
         </div>
         <div id="about-work">
@@ -146,16 +150,23 @@
           </h4>
         </div>
         <div id="about-why">
-          <h1>Why Choose us?</h1>
+          <h1>Ready to Stand Out?</h1>
           <h4>
-            Our personalized approach and dedication to understanding your
-            business make us different. <br />
-            We work tirelessly to ensure your website drives results and helps
-            your business grow. <br />Apart from that we offer
-            <a href="pricing.html">100% money back guarantee! 🤝</a> If you’re
-            not satisfied, you don’t pay a single rupee.
+            Imagine a website tailored to your needs, driving sales, and
+            building your brand’s credibility. We’re dedicated to your success
+            and offer a
+            <a href="pricing.html">30-day 100% money-back guarantee</a>.
+            <br /><br />
+            If you don't get the results that you were promised, you will get
+            your money back and you get to keep the website also OR we can work
+            again on the site to make sure it gets more sales. <br /><br />
+            Join us, and let’s turn your business into a thriving online
+            presence. <br /><br />
+            Your success is our priority, and we’re here to make it happen. 💼✨
             <br />
-            Join us and see the difference we can make.
+            So, what are you waiting for? just click on the button below and get
+            a free strategy session with us to better understand your needs and
+            whether our services is fit for your business or not.
           </h4>
         </div>
         <div id="cta-div">
