--- a/pricing.html
+++ b/pricing.html
@@ -144,7 +144,7 @@
                 <ul>
                   <li>
                     📈 Sales priciples and techniques for converting visitors
-                    into customers. (worth Rs 20,000)
+                    into customers. (worth Rs 30,000)
                   </li>
                   <br />
                   <li>
@@ -153,7 +153,7 @@
                     10,000)
                   </li>
                   <br />
-                  <li>🌐 Rank good in google search. (worth Rs 2,000)</li>
+                  <li>🌐 Rank good in google search. (worth Rs 10,000)</li>
                   <br />
                   <li>
                     📞 Customers can directly contact you through the website.
@@ -172,15 +172,20 @@
                   <br />
                   <li>
                     Conclusion: Engaging and attractive modern website that
-                    pulls customers!
+                    pulls customers like a magnet! 🧲
                   </li>
                   <br />
                 </ul>
                 <h4>
-                  BONUS: 📝 A brand script that help your message to be clear
+                  BONUS 1: 📝 A brand script that help your message to be clear
                   and compelling. Use this script in your marketing, ads or
                   social media branding to sky-rocket your sales! (worth Rs
                   20,000)
+                </h4>
+                <h4>
+                  BONUS 2: 🎯 We will also create a professional logo for your
+                  brand which will make your brand outshine your competitors!
+                  (worth Rs 20,000)
                 </h4>
               </div>
             </div>
@@ -195,24 +200,30 @@
               </h4>
               <h4>
                 Alternatively, we'll work on your website for free until it
-                sells. You can avail this offer for up to 3 months after we
+                sells. You can avail this offer for up to 30 days after we
                 create your brand website.
+              </h4>
+              <h4>
+                As we are just starting out so we have a sale of 80% off for our
+                first 5 customers!
               </h4>
               <h4>And the moment you have been waiting for is here...</h4>
               <h4>
-                Here is our shockingly crazy offer's price: only
-                <span>Rs 50,000</span>
+                Here is our shockingly crazy offer's price: not
+                <span class="cut">Rs 50,000</span> but just for
+                <span> Rs 10,000 </span> as we have a sale of 80% off for first
+                5 customers!
               </h4>
               <h4>
                 Worried about the cost? No problem! We offer easy installment
                 plans because we understand our market and your pain points.
               </h4>
               <h4>Here's how it works:</h4>
-              <h4>⚫ Pay <span>Rs 10,000</span> upfront.</h4>
+              <h4>⚫ Pay <span>Rs 5,000</span> upfront.</h4>
               <h4>
                 ⚫ Pay the rest after we’ve completed your brand script,
                 designed your site, developed, debugged, and optimized it. The
-                entire process usually takes about 3 months.
+                entire process usually takes about 3 - 4 weeks.
               </h4>
               <h4>Sounds great? I know it does😉.</h4>
               <h4>
