--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           </h3>
           <h3>
             And the best part? Our
-            <a href="pricing.html">100% money-back guarantee</a>. If you don't
-            see the results you want, we'll refund every rupee. Invest in your
-            success and watch your business thrive!
+            <a href="pricing.html">30-day 100% money-back guarantee</a>. If you
+            don't see the results you want, we'll refund every rupee. Invest in
+            your success and watch your business thrive!
           </h3>
           <div id="contactBtn">
             <a href="strategy-session.html"
@@ -349,7 +349,9 @@
         <div id="plan-div" class="grid grid-three--cols">
           <div class="plan-item">
             <h1>1.</h1>
-            <h2>We help you plan your website</h2>
+            <h2>
+              You get a tailored plan which will leads you to more sales. 🚀
+            </h2>
             <p>
               Ready to transform your business? Start with a call where we dive
               deep into understanding your needs. We’ll ask the right questions
@@ -374,7 +376,10 @@
           </div>
           <div class="plan-item">
             <h1>2.</h1>
-            <h2>We write words that sell</h2>
+            <h2>
+              You get your entire site written which will include proven sales
+              techniques, so you get more sales. 🎯
+            </h2>
             <p>
               Words matter. We gather all the crucial details about your
               business and craft messages that resonate with your ideal
