css best practices

--- a/pricing.html
+++ b/pricing.html
@@ -315,7 +315,9 @@
           <div id="plan-div" class="grid grid-three--cols">
             <div class="plan-item">
               <h1>1.</h1>
-              <h2>We help you plan your website</h2>
+              <h2>
+                You get a tailored plan which will leads you to more sales. 🚀
+              </h2>
               <p>
                 Ready to transform your business? Start with a call where we
                 dive deep into understanding your needs. We’ll ask the right
@@ -340,7 +342,10 @@
             </div>
             <div class="plan-item">
               <h1>2.</h1>
-              <h2>We write words that sell</h2>
+              <h2>
+                You get your entire site written which will include proven sales
+                techniques, so you get more sales. 🎯
+              </h2>
               <p>
                 Words matter. We gather all the crucial details about your
                 business and craft messages that resonate with your ideal
