--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div id="nav-part--1">
         <div class="logo">
           <a href="index.html">
-            <img src="images/logo.webp" alt="RUMIDEVELOPS"
+            <img src="images/rumidevelopslogo.webp" alt="RUMIDEVELOPS"
           /></a>
         </div>
       </div>
@@ -604,12 +604,12 @@
         <!-- Contact Information -->
         <a href="index.html">
           <img
-            src="images/rumilogo.webp"
+            src="images/rumidevelopslogo.webp"
             alt="Rumidevelops"
             width="300px"
             height="100px"
         /></a>
-        <br /><br />
+        <h1 class="section-common--heading">RumiDevelops</h1>
         <p>
           <span>Contact Us:</span>
           <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
