--- a/pricing.html
+++ b/pricing.html
@@ -50,7 +50,7 @@
       <div id="nav-part--1">
         <div class="logo">
           <a href="index.html">
-            <img src="images/logo.webp" alt="RUMIDEVELOPS"
+            <img src="images/rumidevelopslogo.webp" alt="RUMIDEVELOPS"
           /></a>
         </div>
       </div>
@@ -524,7 +524,7 @@
             width="300px"
             height="100px"
         /></a>
-        <br /><br />
+        <h1 class="section-common--heading">RumiDevelops</h1>
         <p>
           <span>Contact Us:</span>
           <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
