--- a/strategy-session.html
+++ b/strategy-session.html
@@ -71,7 +71,7 @@
             width="300px"
             height="100px"
         /></a>
-        <br /><br />
+        <h1 class="section-common--heading">RumiDevelops</h1>
         <p>
           <span>Contact Us:</span>
           <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
