--- a/pricing.html
+++ b/pricing.html
@@ -12,7 +12,10 @@
       content="rumidevelops, brand website, 100% money back guarantee, grow you business with a brand website"
     />
     <meta name="robots" content="pricing, follow" />
-    <title>Website Development Company In Pakistan for Small Businesses</title>
+    <title>
+      RumiDevelops | Website Development Company In Pakistan for Small
+      Businesses | Guaranteed Results
+    </title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -519,7 +522,7 @@
         <!-- Contact Information -->
         <a href="index.html"
           ><img
-            src="images/rumilogo.webp"
+            src="images/rumidevelopslogo.webp"
             alt="Rumidevelops"
             width="300px"
             height="100px"
