Teamss projectt added

--- a/works.html
+++ b/works.html
@@ -100,15 +100,18 @@
       <div class="projects">
         <div class="project-item">
           <div class="project-item--1">
-            <h2>Art of War: Legions</h2>
+            <h2>
+              Art of War: Legions
+              <span>(Website design, development & SEO)</span>
+            </h2>
             <p>
-              A funny game with huge amount of spectacular battles. I've put my
-              heart into this website. I first designed the entire wireframe
-              then, after my client liked the design, I developed it using
-              modern animations and transitions. Ensuring responsive design that
-              looks good on all screen sizes. And, UI/UX responsibly done. And,
-              I also did their on-page SEO as a complimentary service (free of
-              cost!).
+              A funny game with huge amount of spectacular battles. we have put
+              my heart into this website. <br /><br />
+              We first designed the entire wireframe then, after my client liked
+              the design, I developed it using modern animations and
+              transitions. Ensuring responsive design that looks good on all
+              screen sizes. And, UI/UX responsibly done. And, I also did their
+              on-page SEO as a complimentary service (free of cost!).
             </p>
             <div id="pricingBtn">
               <a target="_blank" href="https://gitwithrumi.github.io/artofwar/">
@@ -119,6 +122,41 @@
           <div class="project-item--2">
             <img
               src="images/AOW-LOGO.webp"
+              width="300px"
+              height="300px"
+              alt="AOW-LOGO"
+            />
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-item--1">
+            <h2>
+              Teamss & Studio
+              <span>(Website content, design, development & SEO)</span>
+            </h2>
+            <p>
+              Teamss & Studio is a photography studio based in lahore. Provides
+              services like wedding photoshoot, fashion photoshoot, and product
+              photography all over Pakistan. <br />
+              <br />We first wrote the entire content of the site and then
+              designed the entire wireframe then, after my client liked the
+              design, I developed it using modern animations and transitions.
+              Ensuring responsive design that looks good on all screen sizes.
+              And, UI/UX responsibly done. And, I also did their on-page SEO as
+              a complimentary service (free of cost!).
+            </p>
+            <div id="pricingBtn">
+              <a
+                target="_blank"
+                href="https://gitwithrumi.github.io/Teamss-Studio/"
+              >
+                <button>Visit site</button>
+              </a>
+            </div>
+          </div>
+          <div class="project-item--2">
+            <img
+              src="images/Teamss.jpg"
               width="300px"
               height="300px"
               alt="AOW-LOGO"
