--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               <a href="about.html"><button>Discover more...</button></a>
             </div>
             <div id="contactBtn">
-              <a href="https://www.instagram.com/hassaan_rumi/"
+              <a href="https://www.instagram.com/rumidevelops.pk/"
                 ><button>Follow me</button></a
               >
             </div>
@@ -623,14 +623,14 @@
         <!-- Social Media Links -->
         <p class="socials">
           <a
-            href="https://www.linkedin.com/in/hassaan-rumi/"
+            href="https://www.facebook.com/profile.php?id=61564179923563"
             target="_blank"
             class="icon"
           >
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/hassaan_rumi/"
+            href="https://www.instagram.com/rumidevelops.pk/"
             target="_blank"
             class="icon"
           >
