--- a/pricing.html
+++ b/pricing.html
@@ -98,7 +98,7 @@
     </div>
 
     <div id="main">
-      <div id="pricing">
+      <div id="pricing" class="container">
         <div id="pricing-header" class="container">
           <h1>
             <span
@@ -520,8 +520,8 @@
       </div>
       <footer class="footer">
         <!-- Contact Information -->
-        <a href="index.html"
-          ><img
+        <a href="index.html">
+          <img
             src="images/rumidevelopslogo.webp"
             alt="Rumidevelops"
             width="300px"
@@ -538,14 +538,14 @@
         <!-- Social Media Links -->
         <p class="socials">
           <a
-            href="https://www.linkedin.com/in/hassaan-rumi/"
+            href="https://www.facebook.com/profile.php?id=61564179923563"
             target="_blank"
             class="icon"
           >
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/hassaan_rumi/"
+            href="https://www.instagram.com/rumidevelops.pk/"
             target="_blank"
             class="icon"
           >
