--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
       <div id="home">
         <div id="home-part--1">
           <h1>
-            Web Development Company In Pakistan That Guarantees More Sales 💸.
-          </h1>
-          <h3>
+           <span>Your Business Deserves to Shine</span> — Boost Sales by 200% with a Custom Brand Website in 30 Days! We’ll guide you every step of the way.<h3>
             Tired of watching your business struggle while the big players
             dominate? Transform your business with a stunning brand website and
             supercharged marketing materials 🎯 from RumiDevelops. And, Watch
@@ -375,7 +373,7 @@
               <strong>Shine Bright:</strong> Let’s make your brand shine and
               stand out in the crowded market!
             </p>
-            <i class="fa-solid fa-phone"></i>
+            <i class="fa-phone fa-solid"></i>
           </div>
           <div class="plan-item">
             <h1>2.</h1>
@@ -403,7 +401,7 @@
               <strong>Impactful Communication:</strong> The right words can make
               all the difference, driving sales and building trust.
             </p>
-            <i class="fa-solid fa-bullseye"></i>
+            <i class="fa-bullseye fa-solid"></i>
           </div>
           <div class="plan-item">
             <h1>3.</h1>
@@ -427,7 +425,7 @@
               <strong>Hosting Done Right:</strong> We host your website,
               ensuring it’s live, fast, and ready to impress your audience.
             </p>
-            <i class="fa-solid fa-code"></i>
+            <i class="fa-code fa-solid"></i>
           </div>
         </div>
         <div id="cta-div">
@@ -454,7 +452,7 @@
         </div>
         <div id="about-us--2" class="container">
           <h1 class="section-common--heading">
-            About <span>rumidevelops</span>
+            About RumiDevelops
           </h1>
           <h3>
             Hi!👋 I'm <span>Hassaan Rumi</span>, The founder of rumidevelops.
@@ -510,7 +508,7 @@
               Google SEO, E-commerce sites, branding & marketing, promotion
               through us, and UI/UX design.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -523,7 +521,7 @@
               discuss your project's main problems and goals, and we'll guide
               you through the process.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -535,7 +533,7 @@
               help center to assist you with any questions or issues you may
               have after your website is launched.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -547,7 +545,7 @@
               based on the project's complexity and requirements. We'll provide
               you with a detailed timeline during the initial consultation.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -559,7 +557,7 @@
               see examples of our previous projects and the quality of work we
               deliver.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -571,7 +569,7 @@
               offer flexible payment plans and financing options to make our
               services more accessible to our clients.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -587,7 +585,7 @@
               ensures your site not only looks great but also converts visitors
               into customers.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
 
           <div class="faq-item">
@@ -599,7 +597,7 @@
               industry-standard security measures and best practices to protect
               your website from potential threats and vulnerabilities.
             </div>
-            <i class="faq-arrow fas fa-chevron-down"></i>
+            <i class="fa-chevron-down faq-arrow fas"></i>
           </div>
         </div>
       </div>
