--- a/pricing.html
+++ b/pricing.html
@@ -25,6 +25,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
     />
+    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <script type="text/javascript">
       window.smartlook ||
         (function (d) {
@@ -342,7 +354,7 @@
                 <strong>Shine Bright:</strong> Let’s make your brand shine and
                 stand out in the crowded market!
               </p>
-              <i class="fa-solid fa-phone"></i>
+              <i class="fa-phone fa-solid"></i>
             </div>
             <div class="plan-item">
               <h1>2.</h1>
@@ -370,7 +382,7 @@
                 <strong>Impactful Communication:</strong> The right words can
                 make all the difference, driving sales and building trust.
               </p>
-              <i class="fa-solid fa-bullseye"></i>
+              <i class="fa-bullseye fa-solid"></i>
             </div>
             <div class="plan-item">
               <h1>3.</h1>
@@ -394,7 +406,7 @@
                 <strong>Hosting Done Right:</strong> We host your website,
                 ensuring it’s live, fast, and ready to impress your audience.
               </p>
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-code fa-solid"></i>
             </div>
           </div>
           <div id="cta-div">
